Agregué mi avatar + info

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -110,13 +110,13 @@
                     <div class="col-9 col-sm-12 col-md-6 col-lg-3">
                         <div class="card">
                             <div class="text-center">
-                                <img class="imagen-avatar-alvaro" src="../assets/img/foto-avatar-A.png" alt="" />
+                                <img class="imagen-avatar-alvaro" src="../assets/img/tomas-avatar.png" alt="" />
                             </div>
                             <h4 class="card-nombre pt-3">Tomás Ponce</h4>
                             <p class="info">
-                                I’m Walter, a multidisciplinary designer who focuses on
-                                telling my clients’ stories visually, through enjoyable and
-                                meaningful experiences. I specialize in responsive websites
+                                Hola, soy Tomás Ponce. Tengo experiencia como programador junior y he trabajado en
+                                diversos proyectos freelance. Disfruto resolver problemas técnicos, aprender
+                                constantemente y aportar valor real a los proyectos en los que participo.
                             </p>
                             <ul class="d-flex gap-5">
                                 <li class="puntos-lista"><a href="./error.html"><i
