--- a/index.html
+++ b/index.html
@@ -595,18 +595,15 @@
                         <div class="row col-12 col-sm-12 col-md-12 col-lg-3">
                             <ul class="puntos-lista">
                                 <b>Redes sociales</b>
-                                <li><a class="links-footer" href="./pages/error.html"
-                                        target="_blank"><i
+                                <li><a class="links-footer" href="./pages/error.html"><i
                                             class="fa-brands fa-instagram fa-lg py-4 px-2 iconos text-light"></i>@vibra.music</a>
                                 </li>
                                 <li><a class="links-footer"
-                                        href="./pages/error.html"
-                                        target="_blank"><i
+                                        href="./pages/error.html"><i
                                             class="fa-brands fa-x-twitter fa-lg py-4 px-2 iconos text-light"></i>@vibra.music</a>
                                 </li>
                                 <li><a class="links-footer"
-                                        href="./pages/error.html"
-                                        target="_blank"><i
+                                        href="./pages/error.html"><i
                                             class="fa-brands fa-facebook-f fa-lg py-4 px-2 iconos text-light"></i>@vibra.music</a>
                                 </li>
                             </ul>
