--- a/pages/pop-ingles.html
+++ b/pages/pop-ingles.html
@@ -86,7 +86,6 @@
         <div class="contenido-main">
             <main>
                 <section class="contenido">
-                    <hr>
                     <h2 class="categoria-titulo">Pop Inglés</h2>
                     <div class="canciones">
                         <a href="error.html" 
@@ -363,21 +362,21 @@
                         <div class="row col-12 col-sm-12 col-md-12 col-lg-3">
                             <ul class="puntos-lista">
                                 <b>sobre la empresa</b>
-                                <li class="py-3"><a class="links-footer" href="./pages/nosotros.html">Acerca de
+                                <li class="py-3"><a class="links-footer" href="./nosotros.html">Acerca de
                                         nosotros</a></li>
-                                <li class="py-2"><a class="links-footer" href="./pages/contacto.html">Contacto por
+                                <li class="py-2"><a class="links-footer" href="./contacto.html">Contacto por
                                         consultas</a></li>
-                                <li class="py-3"><a class="links-footer" href="./pages/error.html">Ayuda</a></li>
+                                <li class="py-3"><a class="links-footer" href="./error.html">Ayuda</a></li>
                             </ul>
                         </div>
                         <div class="row col-12 col-sm-12 col-md-12 col-lg-3">
                             <ul class="puntos-lista">
                                 <b>Membresias</b>
-                                <li class="py-3"><a class="links-footer" href="./pages/suscripcion.html">Plan
+                                <li class="py-3"><a class="links-footer" href="./suscripcion.html">Plan
                                         Individual</a></li>
-                                <li class="py-2"><a class="links-footer" href="./pages/suscripcion.html">Plan Duo</a>
+                                <li class="py-2"><a class="links-footer" href="./suscripcion.html">Plan Duo</a>
                                 </li>
-                                <li class="py-3"><a class="links-footer" href="./pages/suscripcion.html">Plan
+                                <li class="py-3"><a class="links-footer" href="./suscripcion.html">Plan
                                         Familiar</a></li>
                             </ul>
                         </div>
