--- a/pages/suscripcion.html
+++ b/pages/suscripcion.html
@@ -9,6 +9,7 @@
     <meta name="author" content="Tomás Ponce, Alvaro Morillo, Patricio Romero, Santiago Heredia">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/6637e0286d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../styles/index.css">
     <link rel="stylesheet" href="../styles/suscripcion.css">
     <link rel="shortcut icon" href="../assets/img/logo.png" type="image/x-icon">
@@ -16,7 +17,7 @@
 </head>
 
 <body>
-     <header class="nav-borroso fixed-top">
+    <header class="nav-borroso fixed-top">
         <nav class="navbar navbar-expand-lg mx-3">
             <div class="container-fluid d-flex">
                 <a class="navbar-brand px-5" href="../index.html"><img class="imagen-loogo" src="../assets/img/logo.png"
@@ -59,37 +60,89 @@
                 <img src="../assets/img/logoynombre.png" alt="Logo">
             </div>
         </div>
-    </div>
-    <div class="plans">
-        <div class="card">
-            <h2>Individual</h2>
-            <div class="price">$0.99/mes</div>
-            <p>Acceso completo para una persona.</p>
-            <a href="./error.html"><button class="subscribe-btn">Suscribirse</button></a>
         </div>
-        <div class="card">
-            <h2>Dúo</h2>
-            <div class="price">$17.99/mes</div>
-            <p>Acceso completo para dos personas.</p>
-            <a href="./error.html"><button class="subscribe-btn">Suscribirse</button></a>
+        <div class="plans">
+            <div class="card">
+                <h2>Individual</h2>
+                <div class="price">$0.99/mes</div>
+                <p>Acceso completo para una persona.</p>
+                <a href="./error.html"><button class="subscribe-btn">Suscribirse</button></a>
+            </div>
+            <div class="card">
+                <h2>Dúo</h2>
+                <div class="price">$17.99/mes</div>
+                <p>Acceso completo para dos personas.</p>
+                <a href="./error.html"><button class="subscribe-btn">Suscribirse</button></a>
+            </div>
+            <div class="card">
+                <h2>Familiar</h2>
+                <div class="price">$29.99/mes</div>
+                <p>Acceso completo para hasta cinco personas.</p>
+                <a href="./error.html"><button class="subscribe-btn">Suscribirse</button></a>
+            </div>
         </div>
-        <div class="card">
-            <h2>Familiar</h2>
-            <div class="price">$29.99/mes</div>
-            <p>Acceso completo para hasta cinco personas.</p>
-            <a href="./error.html"><button class="subscribe-btn">Suscribirse</button></a>
+        <div class="faq">
+            <h2>¿TIENES PREGUNTAS?</h2>
+            <h3>Preguntas Frecuentes</h3>
+            <ul class="faq-list">
+                <div class="accordion accordion-flush" id="accordionFlushExample">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#flush-collapseOne" aria-expanded="false"
+                                aria-controls="flush-collapseOne">
+                                ¿Cómo funciona la prueba de Vibra Premium?
+                            </button>
+                        </h2>
+                        <div id="flush-collapseOne" class="accordion-collapse collapse"
+                            data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">Al activar tu <code>prueba gratuita de Vibra Premium</code>,
+                                tenés acceso sin
+                                interrupciones a todas las funciones: música sin anuncios, descargas offline, saltos
+                                ilimitados y audio en alta calidad.
+                                La prueba dura 30 días y no tiene costo. Solo necesitás ingresar un método de pago
+                                válido, pero podés cancelarla en cualquier momento antes de que finalice para que no se
+                                te cobre nada..</div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#flush-collapseTwo" aria-expanded="false"
+                                aria-controls="flush-collapseTwo">
+                                ¿Cómo cancelo el plan Premium?
+                            </button>
+                        </h2>
+                        <div id="flush-collapseTwo" class="accordion-collapse collapse"
+                            data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">Ingresá a tu perfil en la web o la app.
+
+                                Andá a Configuración > Suscripción.
+
+                                Tocá en Cancelar plan y seguí las instrucciones.</div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#flush-collapseThree" aria-expanded="false"
+                                aria-controls="flush-collapseThree">
+                                ¿Cómo funciona el plan familiar?
+                            </button>
+                        </h2>
+                        <div id="flush-collapseThree" class="accordion-collapse collapse"
+                            data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">El <code>plan familiar de Vibra Premium</code> permite que hasta 6 personas
+                                usen una sola suscripción, cada una con su cuenta personal e independiente.
+                                Todos los miembros deben vivir en la misma dirección. Cada uno puede escuchar su música
+                                sin interrupciones, crear playlists propias y recibir recomendaciones personalizadas.
+                                El titular del plan puede gestionar fácilmente quién está incluido desde la sección
+                                Administrar familia.</div>
+                        </div>
+                    </div>
+                </div>
+            </ul>
         </div>
-    </div>
-    <div class="faq">
-        <h2>¿TIENES PREGUNTAS?</h2>
-        <h3>Tenemos las respuestas</h3>
-        <ul class="faq-list">
-            <li>¿Cómo funciona la prueba de Vibra Premium?</li>
-            <li>¿Cómo cancelo mi plan premium?</li>
-            <li>¿Cómo funciona el plan Dúo?</li>
-            <li>¿Cómo funciona el plan Familiar?</li>
-        </ul>
-    </div> 
     </main>
 
     <footer>
