--- a/pages/error.html
+++ b/pages/error.html
@@ -63,7 +63,7 @@
                 <a
                   class="efectos nav-link text-center"
                   aria-current="page"
-                  href="index.html"
+                  href="../index.html"
                   >INICIO</a
                 >
               </li>
